# voxelland

./: .gitignore  Cargo.toml  README.md  cbuild.bat  chestdb  crun.bat  crwindows.bat  db  file.txt  lesa  misc  mmu  readme.md  sbwindows.bat  srun.bat  steam_appid.txt
OLDSAVE/: chestdb  db
assets/: bofrag.glsl  bovert.glsl  cloudsfrag.glsl  cloudsvert.glsl  dropvert.glsl  frag.glsl  menufrag.glsl  menuvert.glsl  mfrag.glsl  mvert.glsl  oldfrag.glsl  oldvert.glsl  skyfrag.glsl  starsfrag.glsl  vert.glsl  voxelmodel.vox  wfvert.glsl
assets/models/: player.glb
assets/models/car/trash/: scene.gltf
assets/models/cricket/: scene.gltf
assets/models/monster1/: scene.gltf
assets/models/monster2/: scene.gltf
assets/models/scifi/: sci fi .abc  sci fi .stl  sci fi .usdc
assets/models/ship2/textures/: TexturesCom_Scifi_Floor4_1K_albedo.tif  TexturesCom_Scifi_Floor4_1K_height.tif  TexturesCom_Scifi_Floor4_1K_roughness.tif
assets/voxelmodels/: bamboo1.vox  bamboo2.vox  build1.vox  build2.vox  build3.vox  build4.vox  crystal1.vox  ptree.vox  redrock.vox  rock2.vox  rubbertree.vox  tallgrass1.vox  tallgrass3.vox  tree2.vox  tree4.vox  tree5.vox
benches/: benches.rs
binaries/client/: Cargo.toml
binaries/client/src/: main.rs
binaries/server/: Cargo.toml
binaries/server/src/: main.rs
binaries/test_client/: Cargo.toml
binaries/test_client/src/: main.rs
lib/: Cargo.toml
lib/benches/: benches.rs
lib/src/: audio.rs  blockinfo.rs  blockoverlay.rs  build.rs  camera.rs  chunk.rs  chunkregistry.rs  collisioncage.rs  cube.rs  currentplanet.rs  drops.rs  fader.rs  fixtures.rs  game.rs  guisystem.rs  hud.rs  inventory.rs  keybinds.rs  lib.rs  macros.rs  model.rs  modelentity.rs  monsters.rs  network.rs  packedvertex.rs  planetinfo.rs  playerposition.rs  raycast.rs  recipes.rs  selectcube.rs  server_types.rs  shader.rs  statics.rs  texture.rs  textureface.rs  tools.rs  vec.rs  visions.rs  voxelland.code-workspace  voxmodel.rs  (+2 more)
lib/src/specialblocks/: chest.rs  conveyor.rs  crafttable.rs  door.rs  ladder.rs  mod.rs  specialblocks.rs  tallgrass.rs  torch.rs  vertexutils.rs
lib/tests/: tests.rs
modelprojects/: conveyor.blend  conveyor.blend1  crafttable.blend  cricket.blend  cricket.blend1  mountain.blend  torch.blend
mp/: seed  udm
oldworld/0/: udm
oldworld/1004352909/: seed
oldworld/1037229086/: seed
oldworld/114407304/: seed
oldworld/1343298717/: seed  udm
oldworld/1583714658/: seed
oldworld/1737894762/: seed  udm
oldworld/2003406800/: seed
oldworld/2553869698/: seed  udm
oldworld/2613190665/: seed
oldworld/2655597270/: seed
oldworld/2728001344/: seed
oldworld/2845754931/: seed  udm
oldworld/3055294875/: seed  udm
oldworld/3074158286/: seed  udm
oldworld/3090302688/: seed
oldworld/3186115179/: seed  udm
oldworld/3375771559/: seed
oldworld/3663718066/: seed
oldworld/3765046645/: seed
oldworld/3812289856/: seed  udm
oldworld/3813077551/: seed
oldworld/385400550/: seed
oldworld/3944159370/: seed
oldworld/4047403562/: seed
oldworld/4047946357/: seed  udm
oldworld/4215485702/: seed  udm
oldworld/4247922063/: seed
oldworld/601322876/: seed
oldworld/777601661/: seed  udm
oldworld/824883871/: seed
oldworld/896518215/: seed
oldworld2/0/: udm
rel/: mmu
rel/assets/: bofrag.glsl  cloudsfrag.glsl  menuvert.glsl  mfrag.glsl  mvert.glsl  oldfrag.glsl  oldvert.glsl  skyfrag.glsl  skyvert.glsl  starsfrag.glsl  starsvert.glsl  treehuge.vox  vert.glsl
rel/assets/models/car/: scene.gltf
rel/assets/models/monster2/: scene.gltf
rel/assets/models/mountain/: scene.glb  scene.gltf
rel/assets/models/scifi/: sci fi .fbx  sci fi .mtl  sci fi .x3d
rel/assets/models/ship/: scene.gltf
rel/assets/models/ship2/: TexturesCom_Scifi_Floor4_1K_metallic.tif  scene.gltf
rel/assets/voxelmodels/: bush.vox  rock1.vox  tallgrass2.vox  tree1.vox  tree3.vox
saves/world1/: udm
src/: audio.rs  blockinfo.rs  build.rs  camera.rs  chunk.rs  chunkregistry.rs  collisioncage.rs  cube.rs  drops.rs  fader.rs  game.rs  glyphface.rs  guisystem.rs  hud.rs  lib.rs  main.rs  model.rs  modelentity.rs  packedvertex.rs  planetinfo.rs  raycast.rs  selectcube.rs  shader.rs  tests.rs  text.rs  texture.rs  vec.rs  voxmodel.rs  windowandkey.rs  worldgeometry.rs
world/0/: udm
world/1749066922/: seed
world/2228347200/: seed
world/23119232/: seed
world/2395763926/: seed
world/2835417378/: seed
world/3941835220/: seed
world/699926417/: seed
world/871134550/: seed
