[workspace]
members = [
    "lib",
    "binaries/server",
    "binaries/client"
]

[profile.release]
opt-level = 3  # Maximum optimization level
lto = true     # Enables Link Time Optimization
# debug = true   # Includes debug information even in release builds
codegen-units = 1   # This may increase compilation time but can improve runtime performance