[package]
name = "voxelland"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.3"
async-std = "1.12.0"
bincode = "1.3.3"
dashmap = "5.5.3"
gl = "0.14.0"
glam = "0.27.0"
glfw = "0.55.0"
gltf = "1.4.0"
image = "0.25.1"
kira = "0.6.0"
libfmod = "2.206.5"
lockfree = "0.5.1"
minimp3 = "0.5.1"
noise = "0.9.0"
num_enum = "0.7.2"
percent-encoding = "2.3.1"
rand = "0.8.5"
rodio = "0.18.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }
vox-format = "0.1.0"
walkdir = "2.5.0"
no_deadlocks = "1.3.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false

[profile.release]
opt-level = 3       # Highest level of optimization
lto = true          # Enable Link Time Optimization
panic = 'abort'     # Abort on panic, which can reduce binary size and slightly increase performance
# codegen-units = 1   # This may increase compilation time but can improve runtime performance

[features]
show_cam_pos = []
one_chunk = []
structures = []
