[package]
name = "voxelland"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dashmap = "6.0.1"
gl = "0.14.0"
glam = "0.27.0"
glfw = "0.55.0"
gltf = "1.4.0"
image = "0.25.1"
lockfree = "0.5.1"
noise = "0.9.0"
num_enum = "0.7.2"
percent-encoding = "2.3.1"
rand = "0.8.5"
rodio = "0.18.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }
vox-format = "0.1.0"
walkdir = "2.5.0"
once_cell = "1.19.0"
imgui = "0.9.0"
imgui-opengl-renderer = "0.12.1"
crossbeam = "0.8.4"
bytes = "1.6.1"
steamworks = "0.11.0"
parking_lot = "0.12.3"
atomic_float = "1.0.0"

[features]
default = []
show_cam_pos = []
one_chunk = []
audio = []
glfw = []

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false

[profile.release]
opt-level = 3       # Highest level of optimization
lto = true          # Enable Link Time Optimization
panic = 'abort'     # Abort on panic, which can reduce binary size and slightly increase performance
# codegen-units = 1   # This may increase compilation time but can improve runtime performance




