[package]
name = "voxelland-client"
version = "0.1.0"
edition = "2021"

[dependencies]
voxelland = { path = "../../lib" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vox-format = "0.1.0"

[profile.release]
opt-level = 3  # Maximum optimization level
lto = true     # Enables Link Time Optimization
debug = true   # Includes debug information even in release builds