[package]
name = "voxelland-client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
voxelland = { path = "../../lib", features = ["audio", "glfw"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vox-format = "0.1.0"
no_deadlocks = "1.3.2"
steamworks = "0.11.0"
glfw = "0.55.0"
tracing-appender = "0.2.3"

[profile.release]
opt-level = 3  # Maximum optimization level
lto = true     # Enables Link Time Optimization
debug = true   # Includes debug information even in release builds
codegen-units = 1   # This may increase compilation time but can improve runtime performance
