[package]
name = "voxelland-server"
version = "0.1.0"
edition = "2021"

[dependencies]
voxelland = { path = "../../lib" }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.201", features = ["derive"] }
glam = "0.27.0"
bincode = "1.3.3"