[package]
name = "voxelland-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
voxelland = { path = "../../lib" }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.201", features = ["derive"] }
glam = "0.27.0"
bincode = "1.3.3"
glfw = "0.55.0"
gl = "0.14.0"
no_deadlocks = "1.3.2"
rand = "0.8.5"
dashmap = "5.5.3"