[package]
name = "voxelland-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
voxelland = { path = "../../lib" }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.201", features = ["derive"] }
glam = "0.27.0"
bincode = "1.3.3"
glfw = "0.55.0"
gl = "0.14.0"
no_deadlocks = "1.3.2"
rand = "0.8.5"
dashmap = "5.5.3"
lockfree = "0.5.1"
crossbeam = "0.8.4"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]


[profile.release]
opt-level = 3       # Highest level of optimization
lto = true          # Enable Link Time Optimization
panic = 'abort'     # Abort on panic, which can reduce binary size and slightly increase performance
codegen-units = 1   # This may increase compilation time but can improve runtime performance
