[package]
name = "voxelland-test-client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
voxelland = { path = "../../lib" }
bincode = "1.3.3"

[profile.release]
opt-level = 3       # Highest level of optimization
lto = true          # Enable Link Time Optimization
panic = 'abort'     # Abort on panic, which can reduce binary size and slightly increase performance
# codegen-units = 1   # This may increase compilation time but can improve runtime performance
